--- a/footholdPlanning.yml
+++ b/footholdPlanning.yml
@@ -4,6 +4,6 @@ channels:
   - conda-forge 
 dependencies:
   - python=3.6.*  
-  - numpy=1.9.*
-  - gurobi=9.0.2 
+  - numpy=1.18.*
+  - gurobi=9.0.* 
   - matplotlib=3.3.0 
